# imgui_template_linux_SDL2_OpenGL3_GLEW

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  main.cpp
glad/: CMakeLists.txt  glad.c
glad/include/glad/: glad.h
imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
